chats hecho y documentado, también se documentó carts y products
